--- a/tem.ipynb
+++ b/tem.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pyiron_base import Project"
+    "from pyiron_experimental import Project"
    ]
   },
   {
@@ -16,15 +16,6 @@
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from tem import pySTEMTEMMETAJob"
    ]
   },
   {
@@ -51,7 +42,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tem_job = pr.create_job(pySTEMTEMMETAJob, 'tem')"
+    "tem_job = pr.create_job(pr.job_type.pySTEMTEMMETAJob, 'tem')"
    ]
   },
   {
